[package]
name = "hive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuckoofilter = "0.5.0"
async-std = { version = "1.12", features = ["attributes"] }
parity-scale-codec = { version = "3.2.1", features = ["std"] }
futures = "0.3.25"
parity-scale-codec-derive = "3.1.3"
libp2p = { version = "0.50", features = [
    "async-std",
    "mdns",
    "identify",
    "kad",
    "mplex",
    "noise",
    "ping",
    "tcp",
    "yamux",
    "floodsub",
    "websocket",
] }

[build-dependencies]
tonic-build = "0.8.2"
